# bot

./: .env.dev  README.md  bot.py  identifier.sqlite  pyproject.toml
data/: lolicon.db  setu_config.json
data/draw_card/: fgo.json  fgo_card.json  genshin.json  genshin_arms.json  guardian_arms.json  onmyoji.json  pcr.json  pretty.json  pretty_card.json  prts.json
data/draw_card/draw_card_up/: azur_up_char.json  genshin_up_char.json  guardian_up_char.json  pretty_up_char.json  prts_up_char.json
data/flash/: flash_url.json
data/manager/: plugin_list.yml
data/petpet/: meme_list.yml
data/russian/: market_data.json  market_history.json  russian_data.json
data/russian/backup/: Stock_Exchange 2022-08-24-08.json  Stock_Exchange 2022-08-24-14.json  Stock_Exchange 2022-08-24-20.json  Stock_Exchange 2022-08-25-02.json  Stock_Exchange 2022-08-25-08.json  Stock_Exchange 2022-08-25-14.json  Stock_Exchange 2022-08-26-08.json  Stock_Exchange 2022-08-26-14.json  Stock_Exchange 2022-08-28-02.json  market_data 2022-08-24-08.json  market_data 2022-08-24-14.json  market_data 2022-08-24-20.json  market_data 2022-08-25-02.json  market_data 2022-08-25-08.json  market_data 2022-08-25-14.json  market_data 2022-08-25-20.json  market_data 2022-08-26-08.json  market_data 2022-08-26-14.json  market_data 2022-08-26-20.json  market_data 2022-08-27-02.json  market_data 2022-08-27-08.json  market_data 2022-08-27-14.json  market_data 2022-08-27-20.json  market_data 2022-08-28-02.json  market_data 2022-08-28-08.json  market_data 2022-08-28-14.json  market_data 2022-08-28-20.json  (+34 more)
(+1 files in other folders)
