[tool.poetry]
name = "bot"
version = "0.1.0"
description = "bot"
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7.3"
nonebot2 = "^2.0.0-beta.1"

[tool.poetry.dev-dependencies]
nb-cli = "^0.6.0"

[tool.nonebot]
plugins = ["nonebot_plugin_manager", "nonebot_plugin_memes",  "nonebot_plugin_gamedraw", "nonebot_plugin_petpet", "nonebot_plugin_imageutils", "nonebot_plugin_setu", "nonebot_plugin_apscheduler", "nonebot_plugin_game_collection", "nonebot_plugin_moegoe", "nonebot_plugin_kawaii_robot", "nonebot_plugin_weather_lite", "nonebot_plugin_logo", "nonebot_plugin_offline_mahjong_helper", "nonebot_plugin_treehelp", "nonebot_plugin_flash_silentsave"]
plugin_dirs = ["src/plugins"]

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
